Fixing mobile horizontal scroll

--- a/css/base.css
+++ b/css/base.css
@@ -14,6 +14,11 @@
     padding: 0;
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -21,7 +26,7 @@ html {
 body {
     color: #222;
     font-family: 'Roboto', sans-serif;
-    overflow-x: hidden;
+    position: relative;
 }
 
 a {
